<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp">
    
	<TextView android:id="@+id/scope_fl_prompt"  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="15dp"
	    android:text="@string/scope_fl_prompt"/>	
	<EditText android:id="@+id/scope_fl" 
		android:layout_toRightOf="@id/scope_fl_prompt"
		android:layout_marginLeft="10dp"
		android:layout_alignBaseline="@id/scope_fl_prompt"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
		
	<TextView android:id="@+id/scope_ap_prompt" 
		android:layout_below="@id/scope_fl"
		android:layout_marginTop="15dp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/scope_ap_prompt"/>
	<EditText android:id="@+id/scope_ap" 
		android:layout_below="@id/scope_fl"
		android:layout_toRightOf="@id/scope_ap_prompt"
		android:layout_marginLeft="10dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/ep_fl_prompt" 
		android:layout_below="@id/scope_ap"
		android:layout_marginTop="15dp"
		android:text="@string/ep_fl_prompt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	<EditText android:id="@+id/ep_fl"
		android:layout_below="@id/scope_ap"
		android:layout_toRightOf="@id/ep_fl_prompt"
		android:layout_marginLeft="10dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/ep_afov_prompt"
		android:layout_below="@id/ep_fl"
		android:layout_marginTop="15dp"
		android:text="@string/ep_afov_prompt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	<EditText android:id="@+id/ep_afov" 
		android:layout_below="@id/ep_fl"
		android:layout_toRightOf="@id/ep_afov_prompt"
		android:layout_marginLeft="10dp"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>
	
	<Button android:id="@+id/calculate"
		android:layout_below="@id/ep_afov"
		android:text="@string/calculate_prompt"  
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

</RelativeLayout>
